fixed movie streaming, also tried to fix some css but im too much of a dumbass too

--- a/styles.css
+++ b/styles.css
@@ -86,14 +86,10 @@ h1 {
 
 .media-item {
     background-color: #222;
-    padding: 1rem;
+    padding: 16px;
     border-radius: 10px;
     text-align: center;
     transition: transform 0.2s;
-}
-
-.movies-list:only-child .media-item {
-    transform: none;
 }
 
 .media-item:hover {
